--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.datasource.name= todoapp
-spring.datasource.url= jdbc:mysql://localhost:3306/todoapp
-spring.datasource.username= root
-spring.datasource.password= root
+
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.properties.hibernate.dialect= org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto= update
+
+spring.profiles.active=${ENV:dev}
